--- a/css/Notion.css
+++ b/css/Notion.css
@@ -74,30 +74,24 @@ textarea {
 
 .notion-list {
   box-sizing: border-box;
-  display: block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   height: 30px;
   overflow: hidden;
 }
-.subpagelist,
-.pagelist {
-  margin-top: 5px;
-  float: left;
+.selected {
+  background-color: rgba(55, 53, 47, 0.08);
+  color: black;
 }
 
 .pagedel,
 .subpageadd {
-  margin-top: 5px;
+  /* margin-top: 5px; */
   margin-right: 5px;
-  float: right;
+  /* float: right; */
   visibility: hidden;
-  z-index: 2;
-}
-
-#pagedel,
-#subpageadd {
-  margin-top: 5px;
-  width: 10%;
 }
 
 #subpagelist:hover,
@@ -154,6 +148,7 @@ textarea {
   overflow: hidden;
   float: left;
   flex-direction: row;
+  flex-shrink: 0;
   justify-content: center;
   padding-top: 7rem;
   width: 1200px;
