--- a/css/Notion.css
+++ b/css/Notion.css
@@ -37,6 +37,7 @@ textarea {
 }
 
 .notion-sidebar {
+  position: fixed;
   flex-grow: 0;
   flex-shrink: 0;
   z-index: 99;
@@ -81,16 +82,14 @@ textarea {
   height: 30px;
   overflow: hidden;
 }
-.selected {
+.notion-list.selected {
   background-color: rgba(55, 53, 47, 0.08);
   color: black;
 }
 
 .pagedel,
 .subpageadd {
-  /* margin-top: 5px; */
   margin-right: 5px;
-  /* float: right; */
   visibility: hidden;
 }
 
@@ -103,6 +102,7 @@ textarea {
 .subpagelist {
   margin-right: 10px;
 }
+
 .pagelist {
   white-space: nowrap;
   overflow: hidden;
@@ -143,7 +143,22 @@ textarea {
   padding-top: 2px;
   font-size: 15px;
 }
+.mainpage {
+  position: absolute;
+  display: flex;
+  overflow: hidden;
+  float: left;
+  flex-direction: row;
+  flex-shrink: 0;
+  justify-content: center;
+  padding-top: 7rem;
+  width: 800px;
+  background: white;
+  margin-left: 440px;
+}
+
 .notion-editor {
+  position: absolute;
   display: flex;
   overflow: hidden;
   float: left;
@@ -153,8 +168,32 @@ textarea {
   padding-top: 7rem;
   width: 1200px;
   background: white;
+  margin-left: 260px;
 }
 
 .editor {
-  width: 700px;
+  width: 800px;
+}
+.editor .editor-title {
+  width: 800px;
+}
+.editor .editor-content {
+  width: 800px;
+  height: 400px;
+  border: 1px solid black;
+  padding: 8px;
+}
+
+.errorpage {
+  width: 100vw;
+  height: 100%;
+  z-index: 1000;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+}
+
+.errorpage .errormessage {
+  text-align: center;
 }
